--- a/config.json
+++ b/config.json
@@ -7,7 +7,7 @@
   "inbounds": [
     {
       "port": PORT,
-      "protocol": "vmess",
+      "protocol": "vless",
       "settings": {
         "decryption": "none",
         "clients": [
